fixed layout issue

--- a/style4.css
+++ b/style4.css
@@ -26,7 +26,7 @@ p {
 }
 
 .static-container {
-	width: 60%;
+	width: 90%;
 	display: flex;
 	flex-wrap: wrap;
 }
